Issue #67 fixing height of blog text on mobile

--- a/sites/all/themes/cipp/sass/cipp.scss
+++ b/sites/all/themes/cipp/sass/cipp.scss
@@ -824,4 +824,7 @@ li.service-links-twitter-widget {
   #actions {
     float: none;
   }
+  #block-block-3 .content h2 {
+    font-size: 35px;
+  }
 }
